--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   build_and_push:
     name: Push docker image to Docker Hub
-    runs-on: amazon-linux-2023
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
