--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,9 @@
 server {
     listen 80;
-    server_name http://127.0.0.1;
+    server_name 127.0.0.1;
+     
 
-    client_max_body_size 32m;
+#    client_max_body_size 32m;
 
 #    location ^~ /.well-known/acme-challenge {
 #        default_type text/plain;
@@ -12,6 +13,10 @@ server {
     location / {
         proxy_pass http://app:8000;
         return 301 https://$host$request_uri;
+    }
+    location /test {
+        return 200 'Nginx is working!';
+        add_header Content-Type text/plain;
     }
 }
 
