--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     location / {
         proxy_pass http://app:8000;
-        return 301 https://$host$request_uri;
+#        return 301 https://$host$request_uri;
     }
     location /test {
         return 200 'Nginx is working!';
