--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -43,7 +43,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          source: "docker-compose.yaml, nginx/nginx.conf"
+          source: "docker-compose.yaml"
           target: .
       - name: run docker-compose
         uses: appleboy/ssh-action@v1.0.0
