Configuring domain for CI/CD actions

--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -65,6 +65,7 @@ jobs:
             username: ${{ secrets.USERNAME }}
             key: ${{ secrets.KEY }}
             script: |
+              export DOMAIN=${DOMAIN}
               docker-compose down
               docker rmi -f $(docker images -q)
               docker-compose pull
