Configuring domain for CI/CD actions

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,5 +1,6 @@
 {$DOMAIN} {
 	reverse_proxy {$PROXY_BACKEND}:{$PROXY_PORT} {
 		header_down Strict-Transport-Security max-age=31536000;
+		header_up Host {upstream_hostport}
 	}
 }
