--- a/caddy/Dockerfile
+++ b/caddy/Dockerfile
@@ -5,6 +5,6 @@ COPY start.sh /app/start.sh
 
 COPY Caddyfile /etc/caddy/Caddyfile
 COPY ./requirements.txt /etc/caddy/requirements.txt
-RUN pip install --no-cache-dir --upgrade -r /etc/caddy/requirements.txt
+RUN apk add  --no-cache nss-tools
 
 CMD ["sh", "/app/start.sh"]
