--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -58,6 +58,8 @@ jobs:
           key: ${{ secrets.KEY }}
           source: "docker-compose.yaml"
           target: .
+        env:
+          DOMAIN: ${{ secrets.DOMAIN }}
       - name: run docker-compose
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -68,5 +70,5 @@ jobs:
               docker-compose down
               docker rmi -f $(docker images -q)
               docker-compose pull
-              export DOMAIN=${DOMAIN}
+              export DOMAIN=${{ secrets.DOMAIN }}
               docker-compose up -d
